CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

CUDA_ADD_EXECUTABLE(ripple ripple.cu)
SET_PROPERTY(TARGET ripple  PROPERTY FOLDER chapter05)
TARGET_LINK_LIBRARIES(ripple ${OpenCV_LIBS})

CUDA_ADD_EXECUTABLE(green green.cu)
SET_PROPERTY(TARGET green  PROPERTY FOLDER chapter05)
TARGET_LINK_LIBRARIES(green ${OpenCV_LIBS})