CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

CUDA_ADD_EXECUTABLE(ray ray.cu)
SET_PROPERTY(TARGET ray  PROPERTY FOLDER chapter05)
TARGET_LINK_LIBRARIES(ray ${OpenCV_LIBS})

CUDA_ADD_EXECUTABLE(ray_constant ray_constant.cu )
SET_PROPERTY(TARGET ray_constant  PROPERTY FOLDER chapter05)
TARGET_LINK_LIBRARIES(ray_constant ${OpenCV_LIBS})